projects layout refactored

--- a/src/pug/client-add.pug
+++ b/src/pug/client-add.pug
@@ -3,17 +3,16 @@ title: Добавление клиента
 login: true
 ---
 extends shared/_layout
+include ../components/mainHeader/_mainHeader
+include ../components/mainFooter/_mainFooter
+
 block content
-  
+
   .page-main.page-body__main
-    .main-header._header
-      ._container.container
+    +mainHeader("Добавление клиента")
 
-        ._info
-          h1._heading Добавление клиента
-
-    form.main-body._body(action='/' method='post')
-      .main-content._content
+    form.main-body._body(action='/' js-validate-form)
+      .main-content._content(js-main-content-scroller)
         fieldset._fieldset
           ._fields
             ._container.container
@@ -22,31 +21,29 @@ block content
 
                 .content-form._form
                   .ui-group
-                    label._label Название организации
-                    ._content
-                      input.ui-input._input(type='text')
-                  
-                  .ui-row._ui-row
-                    ._ui-col.ui-col.is-6
-                      .ui-group._ui-group
-                        label._label Имя
-                        input.ui-input._input(type='text' name='')
+                    label Название организации
+                    input.ui-input(type='text')
 
-                    ._ui-col.ui-col.is-6
-                      .ui-group._ui-group
-                        label._label Фамилия
-                        input.ui-input._input(type='text' name='')
-                  
+                  .ui-row
+                    .ui-col.is-6
+                      .ui-group
+                        label Имя
+                        input.ui-input(type='text' name='')
+
+                    .ui-col.is-6
+                      .ui-group
+                        label Фамилия
+                        input.ui-input(type='text' name='')
+
                   .ui-group
-                    label._label Должность
-                    ._content
-                      input.ui-input._input(type='text')
-                  
+                    label Должность
+                    input.ui-input(type='text')
+
                   .ui-group
-                    label._label Email
-                    ._content
-                      input.ui-input._input(type='email')
-        
+                    label Email
+                      i.required *
+                    input.ui-input(type='email' required)
+
         fieldset._fieldset
           ._fields
             ._container.container
@@ -55,26 +52,23 @@ block content
 
                 .content-form._form
                   .ui-group
-                    label._label Название *
-                    ._content
-                      input.ui-input._input(type='text')
-                  
-                  .ui-group
-                    label._label Описание
-                    ._content
-                      textarea.ui-input._input(rows='6')
-                  
-                  .ui-group
-                    label._label Тип анкеты *
-                    ._content
-                      select.ui-input._input(js-select)
-                        option Выберите из списка
-                        option(value='0') Тип 1
-                        option(value='1') Тип 2
-                        option(value='2') Тип 3
-                        option(value='3') Тип 4
-                        option(value='4') Тип 5
+                    label Название проекта
+                      i.required *
+                    input.ui-input(type='text' name="projectName" required)
 
-      .main-footer._footer
-        ._container.container
-          button.btn.btn-primary._btn Сохранить
+                  .ui-group
+                    label Описание
+                    textarea.ui-input(rows='6' name="projectDescription")
+
+                  .ui-group
+                    label Тип анкеты
+                      i.required *
+                    select.ui-input(js-select name="projectType" required)
+                      option Выберите из списка
+                      option(value='0') Тип 1
+                      option(value='1') Тип 2
+                      option(value='2') Тип 3
+                      option(value='3') Тип 4
+                      option(value='4') Тип 5
+
+      +mainFooter("Сохранить")
