--- a/src/pug/project-passport.pug
+++ b/src/pug/project-passport.pug
@@ -3,36 +3,25 @@ title: Интернет-магазин Спортмастер
 login: true
 ---
 extends shared/_layout
+include ../components/mainHeader/_mainHeader
+include ../components/mainFooter/_mainFooter
+
 block content
-  
+
   .page-main.page-body__main
-    .main-header._header
-      ._container.container
+    -
+      var menu = [
+        {url: 'project-add.html', name: 'О проекте', active: true},
+        {url: 'project-passport.html', name: 'Паспорт', active: true},
+        {url: 'project-roles.html', name: 'Сотрудники', active: true},
+        {url: 'project-questions.html', name: 'Вопросы и ответы', active: true},
+        {url: 'project-tasks.html', name: 'Задачи', active: true},
+        {url: 'project-comments.html', name: 'Комментарии', active: true},
+        {url: 'project-access.html', name: 'Права', active: true},
+      ]
 
-        ._info
-          h1._heading Создание проекта
+    +mainHeader("Интернет-магазин Спортмастер", true, menu)
 
-          ._actions
-            a._link(href='projects.html' title='Вернуться к списку проектов')
-              i.ico.ico-mono-chevron-left
-              | Вернуться к списку проектов
-      
-        ul.primary-menu._primary-menu
-          li._item
-            a._link(href='project-add.html' title='О проекте') О проекте
-          li._item
-            a._link.is-active(href='project-passport.html' title='Паспорт') Паспорт
-          li._item
-            a._link(href='project-roles.html' title='Сотрудники') Сотрудники
-          li._item
-            a._link(href='project-questions.html' title='Вопросы и ответы') Вопросы и ответы
-          li._item
-            a._link(href='project-tasks.html' title='Задачи') Задачи
-          li._item
-            a._link(href='project-comments.html' title='Комментарии') Комментарии
-          li._item
-            a._link(href='project-access.html' title='Права') Права
-    
     form.main-body._body(action='/' method='post')
       .main-content._content
         ._container.container
@@ -42,14 +31,14 @@ block content
               .ui-group.-inline
                 label._label Строка
                 input.ui-input._input(type='text')
-              
+
               .ui-group.-inline
                 label._label Число
                 .ui-counter
                   button._btn(type='button') -
                   input._input(type='text' value='15')
                   button._btn(type='button') +
-              
+
               .ui-group.-inline
                 label._label Список
                 select.ui-input._input(js-select)
@@ -59,7 +48,7 @@ block content
                   option(value='2') Тип 3
                   option(value='3') Тип 4
                   option(value='4') Тип 5
-              
+
               .ui-group.-inline
                 label._label Да/Нет
                 ._content
@@ -67,6 +56,4 @@ block content
                     input._input(type='checkbox' name='' checked)
                     span._handle
 
-      .main-footer._footer
-        ._container.container
-          button.btn.btn-primary._btn К следующему шагу
+      +mainFooter("К следующему шагу")
