--- a/src/components/primaryMenu/_primary-menu.sass
+++ b/src/components/primaryMenu/_primary-menu.sass
@@ -24,7 +24,7 @@
       position: absolute
       left: 10px
       bottom: 0
-      right: 0px
+      right: 100%
       height: 4px
       background-color: $colorPrimary
       transition: .25s $ease
