--- a/src/components/mainHeader/_mainHeader.pug
+++ b/src/components/mainHeader/_mainHeader.pug
@@ -1,4 +1,4 @@
-mixin mainHeader(title, hasReturn,  menu)
+mixin mainHeader(title, hasReturn,  menuType)
   .main-header(js-min-header-onscroll)
     .main-header__container.container
 
@@ -6,13 +6,37 @@ mixin mainHeader(title, hasReturn,  menu)
         h1.main-header__heading= title
 
         .main-header__actions
-          if hasReturn
+          if hasReturn === true
             a.main-header__link(href='projects.html' title='Вернуться к списку проектов')
               +svgMono("arrow-left")
               span Вернуться к списку проектов
+          if hasReturn === 2
+            a.main-header__link(href='forms.html' title='Вернуться к списку анкет')
+              +svgMono("arrow-left")
+              span Вернуться к списку анкет
+      -
+        var menu = [
+          [
+            {url: 'project-add.html', name: 'О проекте', active: true},
+            {url: 'project-passport.html', name: 'Паспорт', active: true},
+            {url: 'project-roles.html', name: 'Сотрудники', active: true},
+            {url: 'project-questions.html', name: 'Вопросы и ответы', active: true},
+            {url: 'project-tasks.html', name: 'Задачи', active: true},
+            {url: 'project-comments.html', name: 'Комментарии', active: true},
+            {url: 'project-access.html', name: 'Права', active: true},
+          ],
+          [
+            {url: 'form-add.html', name: 'Общие сведения'},
+            {url: 'form-passport.html', name: 'Паспорт'},
+            {url: 'form-roles.html', name: 'Роли'},
+            {url: 'form-questions.html', name: 'Вопросы и ответы'}
+          ]
+        ]
 
-      if menu && menu.length > 0
+        var targetMenu = menu[menuType - 1]
+
+      if menuType && targetMenu && targetMenu.length > 0
         ul.primary-menu.main-header__primary-menu
-          each element, index in menu
+          each element, index in targetMenu
             li.primary-menu__item
               a.primary-menu__link(href=element.url title=element.name)= element.name
