--- a/src/pug/project-add.pug
+++ b/src/pug/project-add.pug
@@ -9,18 +9,7 @@ include ../components/mainFooter/_mainFooter
 block content
 
   .page-main.page-body__main
-    -
-      var menu = [
-        {url: 'project-add.html', name: 'О проекте', active: true},
-        {url: 'project-passport.html', name: 'Паспорт', active: true},
-        {url: 'project-roles.html', name: 'Сотрудники', active: true},
-        {url: 'project-questions.html', name: 'Вопросы и ответы', active: true},
-        {url: 'project-tasks.html', name: 'Задачи', active: true},
-        {url: 'project-comments.html', name: 'Комментарии', active: true},
-        {url: 'project-access.html', name: 'Права', active: true},
-      ]
-
-    +mainHeader("Создание проекта", true, menu)
+    +mainHeader("Создание проекта", true, 1)
 
     form.main-body._body(action='/' method='post')
       .main-content._content
