--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -12,7 +12,7 @@ block content
     +mainHeader("Проекты")
 
     .main-body._body
-      .main-content._content
+      .main-content._content(js-main-content-scroller)
         ._container.container
           ._list
 
