--- a/src/pug/project-comments.pug
+++ b/src/pug/project-comments.pug
@@ -13,7 +13,7 @@ block content
     +mainHeader("Создание проекта", true, 1)
 
     form.main-body._body(action='/' method='post')
-      .main-content._content
+      .main-content._content(js-main-content-scroller)
         ._container.container
 
           .content-comments._comments
