--- a/src/pug/project-roles.pug
+++ b/src/pug/project-roles.pug
@@ -12,7 +12,7 @@ block content
     +mainHeader("Интернет-магазин Спортмастер", true, 1)
 
     form.main-body._body(action='/' method='post')
-      .main-content._content
+      .main-content._content(js-main-content-scroller)
         ._container.container
           ._inner
 
