--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -6,9 +6,9 @@ login: true
 extends shared/_layout
 block content
 
-  .page-main.page-body__main
-    .main-body.page-main__body
-      .main-content.main-body__content
+  .page-main
+    .main-body
+      .main-content
         .main-content__container.container
           .main-content__inner
 
