--- a/src/sass/elements/_buttons.sass
+++ b/src/sass/elements/_buttons.sass
@@ -23,6 +23,7 @@ button
 
   &-primary
     color: white
+    font-size: 14px
     background: $colorPrimary
     &:hover
       background: #2A87C7
@@ -36,8 +37,15 @@ button
 
   &-outline
     color: $colorPrimary
+    font-size: 14px
+    padding-top: 9px
+    padding-bottom: 9px
     border: 1px solid $colorPrimary
     background-color: transparent
+    &:hover
+      color: #2A87C7
+      border-color: #2A87C7
+
     &[disabled]
       color: $colorLight
       border-color: $borderColor
