--- a/src/components/mainFooter/_main-footer.sass
+++ b/src/components/mainFooter/_main-footer.sass
@@ -1,7 +1,7 @@
 
 .main-footer
   padding: 30px 0
-  flex-shrink: 0
+  flex: 0 0 auto
   border-top: 1px solid $borderColor
   transition: padding .25s $ease
 
