--- a/src/components/mainHeader/_main-header.sass
+++ b/src/components/mainHeader/_main-header.sass
@@ -1,5 +1,5 @@
 .main-header
-  flex-shrink: 0
+  flex: 0 0 auto
   margin-top: 50px
   border-bottom: 1px solid $borderColor
   transition: margin .25s $ease
