--- a/src/pug/form-questions.pug
+++ b/src/pug/form-questions.pug
@@ -8,11 +8,11 @@ include ../components/mainFooter/_mainFooter
 
 block content
 
-  .page-main.page-body__main
+  .page-main
     +mainHeader("Создание анкеты", 2, 2)
 
-    form.main-body._body(action='/' method='post')
-      .main-content._content(js-main-content-scroller)
+    form.main-body(action='/' method='post')
+      .main-content(js-main-content-scroller)
         ._container.container
           ._inner
 
