--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -41,20 +41,6 @@ body, html
   width: 100%
 
 
-.page
-  display: flex
-  flex-direction: column
-  height: 100vh
-
-  &__header, &__footer
-    flex-shrink: 0
-
-  &__body
-    flex: 1 1 auto
-
-    &:first-child
-      padding-top: 0
-
 .container
   width: 100%
   margin-left: auto
@@ -66,30 +52,26 @@ body, html
 .page-body
   display: flex
   flex-direction: column
-
-  &__main
-    flex: 1 1 100%
-    max-height: 100%
-
+  height: 100vh
+  min-height: 500px
+  // overflow: hidden
 
 .page-main
   display: flex
   flex-direction: column
-  &__body
-    flex: 1 1 auto
-    min-height: 0
-
+  flex: 1 1 auto
+  min-height: 1px
+  // max-height: 100%
 
 .main-body
   display: flex
   flex-direction: column
-
-  &__content
-    flex: 1 1 auto
-    min-height: 0
-
+  flex: 1 1 auto
+  min-height: 1px
 
 .main-content
+  flex: 1 1 auto
+  min-height: 1px
   overflow-x: hidden
   overflow-y: auto
 
@@ -135,9 +117,6 @@ body, html
   &__intro
     padding: 20px 0
 
-  &__project-card
-    border-bottom: 1px solid $borderColor
-
   &__info
     margin-bottom: 30px
 
@@ -146,6 +125,7 @@ body, html
 
   &__pagenav
     margin-top: 30px
+    margin-bottom: 30px
 
 
 
@@ -215,38 +195,6 @@ body, html
 
 
 
-
-
-.progress
-  display: inline-flex
-  position: relative
-  height: 5px
-  background-color: #D2DBE5
-
-  &__cell
-    flex-shrink: 0
-    width: 8px
-    border-right: 1px solid white
-
-    &:last-child
-      border-right: 0
-
-    &--complete
-      background-color: $colorPrimary
-
-  &__title
-    position: absolute
-    left: 50%
-    bottom: 100%
-    margin-bottom: 13px
-    padding: 10px
-    display: none
-    font-size: 12px
-    line-height: 1
-    background-color: $colorBg
-    white-space: nowrap
-    transform: translate(-50%, 0)
-    box-shadow: 0px 1px 4px rgba(11, 28, 45, 0.15);
 
 
 .tags
