--- a/src/pug/project-passport.pug
+++ b/src/pug/project-passport.pug
@@ -1,6 +1,6 @@
 ---
 title: Интернет-магазин Спортмастер
-login: true
+auth: false
 ---
 extends shared/_layout
 include ../components/mainHeader/_mainHeader
