--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -138,6 +138,32 @@ textarea.ui-input
       line-height: 1.3
       font-size: 14px
       cursor: pointer
+  &--full
+    position: relative
+    padding: 18px 15px
+    min-height: 57px
+    label
+      border: 1px solid $colorBg
+      background: $colorBg
+      border-radius: 4px
+      position: absolute
+      width: 100%
+      height: 100%
+      left: 0
+      top: 0
+      // min-height: 57px
+      padding: 16px 15px
+      &:before
+        left: 15px
+      &:after
+        left: 21px
+    input
+      &:checked
+        + label
+          background: #fff
+          border: 1px solid $colorPrimary
+          &::before
+            background-color: $colorPrimary
 
 .ui-checkbox
   label
